--- a/24-Login-Facebook/app/src/main/AndroidManifest.xml
+++ b/24-Login-Facebook/app/src/main/AndroidManifest.xml
@@ -5,16 +5,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".LoginFacebook"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name="com.facebook.FacebookActivity"
-            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name" />
+
+        <!-- Facebook -->
+git
 
         <!-- Agregamos el identificador de la aplicación que hemos creado en Facebook -->
         <meta-data
@@ -22,13 +22,15 @@
             android:value="@string/facebook_app_id" />
 
         <activity android:name=".MainActivity">
+        </activity>
+
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
